# etl_templates

./: .gitignore  Generator.py  Json_Model.md  README.md  class_design.py  config.yml  decompose.py  duckdb_deploy.py  logging_config.py  main.html  main.py  model notes.txt  model.py  model_entity.py  model_helpers.py  model_mapping.py  model_object.py  model_objects.py  pd_document.py  pd_document_pdm.py  pd_documents.py  pd_extractor.py  pd_extractor_pdm.py  pd_object_cleaner.py  pd_object_extractor.py  pd_object_transformer.py  pd_transform_mappings.py  pd_transform_model_internal.py  pd_transform_model_physical.py  pd_transform_models_external.py  pd_transform_object.py  pd_transform_pdm.py  pyproject.toml  requirements.txt  setup.py  xml_to_json.py
docs/: Json_Model.md  Model_Extracted_Diagram.md  Model_Extractor.md  model.md
docs/source/: PowerDesigner.rst  Usage.rst  conf.py  index.rst  pd_document.rst  pd_extractor.rst  pd_transform.rst
input/: ExampleDWH.ldm  ExampleSource.ldm  MDDE (PDM).pdm  Reference.ldm  model_dwh.xml  models.json
output/dedicated-pool/: CL_dms_table_1.sql  CL_dms_table_2.sql
src/generator/: json_query.py  main.py
src/pd_extractor/: pd_document.py  pd_document_pdm.py  pd_documents.py  pd_extractor.py  pd_extractor_pdm.py  pd_transform_mappings.py  pd_transform_model_internal.py  pd_transform_model_physical.py  pd_transform_models_external.py  pd_transform_object.py  pd_transform_pdm.py
templates/dedicated-pool/: create_table.sql  create_view.sql
