[project]
name = "etl-templates"
version = "0.1.0"
description = "Deploy descriptions of logical data models and descriptions of model lineage mappings to fill those models with data for multiple technical solutions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.3",
    "jinja2>=3.1.5",
    "python-json-logger>=3.2.1",
    "pyyaml>=6.0.2",
    "xmltodict>=0.14.2",
]
